[gd_scene load_steps=19 format=2]

[ext_resource path="res://fonts/OpenDyslexic3-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD/HUD.gd" type="Script" id=2]
[ext_resource path="res://icons/gametimer.png" type="Texture" id=3]
[ext_resource path="res://HUD/State.gd" type="Script" id=4]
[ext_resource path="res://default_theme.tres" type="Theme" id=5]
[ext_resource path="res://sounds/loadscreen.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/gameplay.wav" type="AudioStream" id=7]
[ext_resource path="res://HUD/HealthIndicator.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="GDScript" id=6]
script/source = "extends TextureProgress

var time = 0
var time_period = 0.2
var cooldown = 1.0

func _ready():
	$\".\".value = 0
	$LoadingTimer.wait_time = cooldown
	set_process(false)

func start():
	set_process(true)
	$LoadingTimer.start()

func _process(delta):
	time += delta

	if time > time_period:
		$\".\".value = int(($LoadingTimer.time_left / cooldown) * 100)

func _on_LoadingTimer_timeout():
	$\".\".value = 0
	$LoadingTimer.wait_time = cooldown
	set_process(false)
"

[sub_resource type="InputEventAction" id=4]
action = "ui_accept"
pressed = true

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 40
extra_spacing_top = -20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0431373, 0.0431373, 0.113725, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0431373, 0.0431373, 0.113725, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.0745098, 0.0980392, 0.215686, 1 )

[node name="Control" type="Node2D"]
script = ExtResource( 2 )

[node name="QuitButton" type="Button" parent="."]
margin_top = 640.0
margin_right = 232.0
margin_bottom = 704.0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
shortcut_in_tooltip = false
button_mask = 7
text = "Stop."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loading" type="TextureProgress" parent="."]
margin_left = 104.0
margin_top = 80.0
margin_right = 285.0
margin_bottom = 260.0
rect_scale = Vector2( 1.5, 1.5 )
texture_progress = ExtResource( 3 )
fill_mode = 5
script = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingTimer" type="Timer" parent="Loading"]

[node name="StartButton" type="Button" parent="."]
margin_left = 248.0
margin_top = 640.0
margin_right = 480.0
margin_bottom = 704.0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
shortcut_in_tooltip = false
button_mask = 7
shortcut = SubResource( 5 )
text = "Go!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
margin_left = 64.0
margin_top = 136.0
margin_right = 432.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 2 )
text = "Touch to match the patterns see how high you can go!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_top = 8.0
margin_right = 480.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 3 )
text = "Pithy Patterns"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LoadScreenAudioStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
pitch_scale = 0.75

[node name="GamePlayAudioStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 10.0

[node name="InfoBar" type="HBoxContainer" parent="."]
margin_right = 480.0
margin_bottom = 73.0
rect_min_size = Vector2( 480, 70 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="InfoBar"]
margin_right = 48.0
margin_bottom = 70.0
rect_min_size = Vector2( 48, 70 )
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.580392, 0.133333, 0.133333, 1 )
custom_fonts/font = SubResource( 10 )
keep_pressed_outside = true
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="InfoBar"]
margin_left = 52.0
margin_right = 192.0
margin_bottom = 73.0
rect_min_size = Vector2( 140, 0 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 2
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthIndicator" parent="InfoBar" instance=ExtResource( 8 )]
position = Vector2( 300, 0 )

[node name="TabContainer" type="TabContainer" parent="."]
margin_top = 296.0
margin_right = 480.0
margin_bottom = 616.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameModeTab" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 45.0
theme = ExtResource( 5 )
custom_styles/tab_bg = SubResource( 7 )

[node name="SC" type="ScrollContainer" parent="TabContainer/GameModeTab"]
margin_left = 16.0
margin_right = 460.0
margin_bottom = 275.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
custom_styles/bg = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mode" type="ItemList" parent="TabContainer/GameModeTab/SC"]
margin_right = 444.0
margin_bottom = 275.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
custom_styles/bg = SubResource( 9 )

[node name="SettingsTab" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 45.0

[node name="VBC" type="VBoxContainer" parent="TabContainer/SettingsTab"]
margin_left = 24.0
margin_right = 460.0
margin_bottom = 275.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="CheckButton" parent="TabContainer/SettingsTab/VBC"]
margin_right = 436.0
margin_bottom = 56.0
pressed = true
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TapSound" type="CheckButton" parent="TabContainer/SettingsTab/VBC"]
margin_top = 60.0
margin_right = 436.0
margin_bottom = 116.0
pressed = true
text = "Tap Sound"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="State" type="Node" parent="."]
script = ExtResource( 4 )

[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="timeout" from="Loading/LoadingTimer" to="Loading" method="_on_LoadingTimer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="InfoBar/Exit" to="." method="_on_Exit_pressed"]
[connection signal="toggled" from="TabContainer/SettingsTab/VBC/Music" to="." method="_on_Music_toggled"]
[connection signal="toggled" from="TabContainer/SettingsTab/VBC/TapSound" to="." method="_on_TapSound_toggled"]
